--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -4,6 +4,9 @@
     --main-color:yellow;
     --second-color:#effd5f;
     --bg-color: #000137;
+    --bg-color2:#b0ffd5;
+    --bg-color3: #
+
 
 }
 
@@ -46,4 +49,47 @@ nav ul li a:hover{
     font-size: 2rem;
     color:var(--text-color2);
     font-weight: 900;
+}
+.main{
+    width: 100%;
+}
+.home{
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+section{
+    width: 100%;
+    height: 100vh;
+}
+.left{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.left p{
+    font-size:2rem;
+    color: var(--second-color);
+    margin-bottom: 10px;
+
+}
+.left h4{
+    font-size: 3rem;
+    color: var(--text-color2);
+
+}
+.btn{
+    margin-top: 50px;
+    padding:1.5rem 5rem;
+    background: var(--bg-color2);
+    border-radius: 20px;
+    color: var(--text-color);
+    font-size: 1rem;
+    font-weight: 700;
+
+}
+.btn:hover{
+    box-shadow: 0 2px 6px var(--second-color);
 }
